# basic_neural_network

./: .gitignore  README.md
code/: CMakeLists.txt
code/include/: data_set.h  functions.h  layer.h  n_network.h
code/src/: data_set.cpp  functions.cpp  layer.cpp  main.cpp  n_network.cpp
